--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="menu">
         <a href="#" class="btn" data-filter="all">All</a>
         <a href="#" class="btn" data-filter="logo">Logo Design</a>
-        <a href="#" class="btn" data-filter="wed">All</a>
+        <a href="#" class="btn" data-filter="wed">Web</a>
         <a href="#" class="btn" data-filter="mobile">Mobile Apps</a>
       </div>
 
